# Codingal-ai

./: .gitignore  pyproject.toml
app/: __init__.py  urls.py  wsgi.py
backend/: __init__.py  conftest.py  manage.py  pytest.ini  requirements.txt
backend/app/: __init__.py  db.sqlite3
backend/app/app/: asgi.py  settings.py  urls.py  wsgi.py
backend/app/core/: models.py  serializers.py  urls.py  views.py
backend/app/core/management/commands/: seed_demo.py
backend/app/core/migrations/: 0001_initial.py
backend/app/core/services/: recommender.py
backend/app/core/tests/: test_api.py  test_code_analysis.py  test_models.py  test_recommender.py
frontend/: package-lock.json
frontend/public/data/: attempts.json  lessons.json
frontend/src/: App.tsx  types.ts
frontend/src/ai/: explain.ts  recommender.ts
frontend/src/ai/codeChecks/: index.ts  rule-duplicate-block.ts  rule-for-loop-off-by-one.ts  rule-missing-return.ts  rule-unused-vars.ts
frontend/src/components/: CoachPanel.tsx  CodeAttemptViewer.tsx  CourseCard.tsx  CourseDetailPanel.tsx
frontend/src/lib/: date.ts
frontend/src/routes/: Dashboard.tsx
frontend/tests/ai/: codeChecks.test.ts  recommender.test.ts
