[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "codingal-ai"
version = "0.1.0"
description = "Codingal AI web application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = {find = {include = ["app", "backend", "backend.*"]}}
